# app_template

./: CMakeLists.txt  Dockerfile  README.md
src/: app.cpp
